Fix Java 8 feature compatibility